--- a/project.html
+++ b/project.html
@@ -7,6 +7,7 @@
 		<header>
 			<p>name</p>
 			<a href="projects/fitness2/index.html">fitness Chapter 2</a>
+			<a href="projects/fitness3/index.html">fitness Chapter 3</a>
 		</header>
 	</body>	
 <html>
