--- a/project.html
+++ b/project.html
@@ -5,9 +5,14 @@
 	
 	<body>
 		<header>
-			<p>name</p>
-			<a href="projects/fitness2/index.html">fitness Chapter 2</a>
-			<a href="projects/fitness3/index.html">fitness Chapter 3</a>
+
+			<p>Casey Harman </p>
+			<a href="index.html">Home </a>
+			<ol>
+			  <li><a href="projects/fitness2/index.html">fitness Chapter 2</a></li>
+				<li><a href="projects/fitness3/index.html">fitness Chapter 3</a></li>
+				<li><a href="projects/fitness6/index.html">fitness Chapter 4-6</a></li>
+			</ol>
 		</header>
 	</body>	
 <html>
