--- a/project.html
+++ b/project.html
@@ -9,9 +9,10 @@
 			<p>Casey Harman </p>
 			<a href="index.html">Home </a>
 			<ol>
-			  <li><a href="projects/fitness2/index.html">fitness Chapter 2</a></li>
-				<li><a href="projects/fitness3/index.html">fitness Chapter 3</a></li>
-				<li><a href="projects/fitness6/index.html">fitness Chapter 4-6</a></li>
+			  <li><a href="projects/web/fitness2/index.html">fitness Chapter 2</a></li>
+				<li><a href="projects/web/fitness3/index.html">fitness Chapter 3</a></li>
+				<li><a href="projects/web/fitness6/index.html">fitness Chapter 4-6</a></li>
+				<li><a href="projects/javascript/ch2/js02.html">js ch2 example</a></li>
 			</ol>
 		</header>
 	</body>	
