--- a/project.html
+++ b/project.html
@@ -12,7 +12,9 @@
 			  <li><a href="projects/web/fitness2/index.html">fitness Chapter 2</a></li>
 				<li><a href="projects/web/fitness3/index.html">fitness Chapter 3</a></li>
 				<li><a href="projects/web/fitness6/index.html">fitness Chapter 4-6</a></li>
+				<li><a href="projects/web/fitness7/index.html">fitness Chapter 7</a></li>
 				<li><a href="projects/javascript/ch2/js02.html">js ch2 example</a></li>
+
 			</ol>
 		</header>
 	</body>	
