--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
 				<li><a href="projects/web/fitness6/index.html">fitness Chapter 4-6</a></li>
 				<li><a href="projects/web/fitness7/index.html">fitness Chapter 7</a></li>
 				<li><a href="projects/javascript/ch2/js02.html">js ch2 example</a></li>
+				<li><a href="projects/javascript/ch3/js03.html">js ch3 example</a></li>
 
 			</ol>
 		</header>
