--- a/project.html
+++ b/project.html
@@ -13,6 +13,8 @@
 				<li><a href="projects/web/fitness3/index.html">fitness Chapter 3</a></li>
 				<li><a href="projects/web/fitness6/index.html">fitness Chapter 4-6</a></li>
 				<li><a href="projects/web/fitness7/index.html">fitness Chapter 7</a></li>
+				<li><a href="projects/web/fitness8-9/index.html">fitness Chapter 8-9</a></li>
+				//////////////////////////////////////////
 				<li><a href="projects/javascript/ch2/js02.html">js ch2 example</a></li>
 				<li><a href="projects/javascript/ch3/js03.html">js ch3 example</a></li>
 
