--- a/project.html
+++ b/project.html
@@ -17,6 +17,8 @@
 				//////////////////////////////////////////
 				<li><a href="projects/javascript/ch2/js02.html">js ch2 example</a></li>
 				<li><a href="projects/javascript/ch3/js03.html">js ch3 example</a></li>
+				<li><a href="projects/javascript/ch3p4/project03-04_txt.html">js ch3 project 4</a></li>
+
 
 			</ol>
 		</header>
